# cram

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  config.py  log.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bot/: .env.example  README.md  formatter.py  intent.py  main.py  runner.py  session_map.py  settings.py
config/: india_formulary.json
eval/: BENCHMARKS.md  README.md  build_dataset.py  cochrane_recall.py  planted_errors.py
eval/datasets/: cochrane_reviews.jsonl  planted_errors.jsonl
eval/results/: baseline_full_pipeline.json  baseline_planted.json  baseline_search_only.json
examples/: README.md  RESULTS.md  scenarios.md
examples/reports/: 01-sglt2i-complex-hfpef.md  02-periop-tkr-multimorbidity.md  03-tb-pragmatic-rct-india.md
memory/: persistent.py  session_search.py  store.py
pipeline/: alerts.py  bfs.py  chat.py  compactor.py  contradiction.py  dfs.py  intake.py  pdf.py  question_analyzer.py  skills.py  synthesis.py  unknown_unknowns.py  verifier.py
profiles/: base.py  registry.py
provider/: openrouter.py
search/: base.py  brave.py  clinical_trials.py  cochrane.py  core_api.py  crossref.py  ctri.py  ddg.py  doaj.py  europe_pmc.py  exa.py  fda_drug.py  guidelines.py  medrxiv.py  open_alex.py  openfda.py  pmc_fulltext.py  pubmed.py  result.py  retraction.py  semantic_scholar.py  unpaywall.py  youtube.py
tests/: conftest.py  test_core.py  test_e2e.py  test_eval.py
